<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baking_widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/cake_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cake_widget"
        android:scaleType="centerInside"
        android:src="@drawable/cake" />

    <RelativeLayout
        android:id="@+id/ingredients_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/ingredients_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:alpha="0.2"
            android:contentDescription="@string/widget_background"
            android:scaleType="centerCrop"
            android:src="@drawable/ingredients" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/recipe_name"
            android:padding="@dimen/margin_small"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Nutella Pie" />

        <TextView
            android:id="@+id/ingredients_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_tv"
            android:contentDescription="@string/recipe_name"
            android:padding="@dimen/margin_tiny"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="2 cups of that" />

        <ImageView
            android:id="@+id/tasty_iv"
            android:layout_width="@dimen/tasty_dimen"
            android:layout_height="@dimen/tasty_dimen"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/tasty_image"
            android:src="@drawable/tasty" />

    </RelativeLayout>

</RelativeLayout>